# jeanne-machine

./: CLAUDE.md  railway.toml  vercel.json
docs/: DATA_SOURCE_LICENSING.md
tt-policy-tracker/: .env.example  .gitignore  Dockerfile  Dockerfile.local  README.md  alembic.ini  audit.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
tt-policy-tracker/adapters/: __init__.py  base.py  bls_cpi.py  congress.py  courtlistener.py  federal_register.py  legiscan.py  legiscan_search.py  legistar.py  openstates.py  wa_leg.py
tt-policy-tracker/api/: main.py
tt-policy-tracker/cli/: audit.py  digest.py  enrich.py  ingest.py
tt-policy-tracker/digest/: builder.py  sender.py  slack.py
tt-policy-tracker/docs/: coverage-gap-plan.md  recall-first-architecture.md
tt-policy-tracker/enrichment/: alerting.py  classifier.py  content_drafter.py  feedback.py  geotagger.py  keywords.py  law_synthesizer.py  pipeline.py  product_areas.py  summarizer.py  triage.py
tt-policy-tracker/storage/: database.py  models.py
tt-policy-tracker/storage/migrations/: env.py
tt-policy-tracker/tests/: test_adapters.py  test_alerting.py  test_config.py  test_digest_builder.py  test_feedback.py  test_geotagger.py  test_keywords.py  test_legiscan_search.py  test_slack_budget.py  test_slack_digest.py  test_triage.py
tt-policy-tracker/tests/eval/: labeled_documents.jsonl  test_classifier.py
tt-policy-tracker/web/: .env.example  .gitignore  .vercelignore  next.config.ts  package-lock.json  package.json  uv.toml  vercel.json
tt-policy-tracker/web/app/: globals.css  layout.tsx  page.tsx
(+20 files in other folders)
